--- a/app/src/main/res/layout/widget_single_note.xml
+++ b/app/src/main/res/layout/widget_single_note.xml
@@ -8,7 +8,7 @@
         android:id="@+id/singleNoteContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg_highlighted"
+        android:background="@color/bg_transparent"
         android:padding="10dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/fg_default" />
