create new instance of NoteSQLiteOpenHelper on SettingsChangedEvent

--- a/app/src/main/res/layout/activity_single_note.xml
+++ b/app/src/main/res/layout/activity_single_note.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent">
 
         <TextView
-        android:id="@+id/singleNoteContent"
+            android:id="@+id/single_note_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
