--- a/app/src/main/res/layout/widget_all_notes.xml
+++ b/app/src/main/res/layout/widget_all_notes.xml
@@ -7,5 +7,9 @@
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/bg_transparent"
+        android:padding="10dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/fg_contrast" />
 </FrameLayout>
