--- a/app/src/main/res/layout/fragment_notes_list_view.xml
+++ b/app/src/main/res/layout/fragment_notes_list_view.xml
@@ -25,7 +25,9 @@
         android:id="@+id/noteModified"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="false"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="false"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_alignWithParentIfMissing="true"
