--- a/app/src/main/res/layout/activity_single_note.xml
+++ b/app/src/main/res/layout/activity_single_note.xml
@@ -12,7 +12,7 @@
         <TextView
             android:id="@+id/single_note_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+            android:layout_height="wrap_content"
         android:padding="10dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/fg_default" />
