--- a/app/src/main/res/menu/menu_menu_create.xml
+++ b/app/src/main/res/menu/menu_menu_create.xml
@@ -6,13 +6,13 @@
         android:id="@+id/action_create_cancel"
         android:icon="@drawable/ic_action_cancel"
         android:orderInCategory="90"
-        app:showAsAction="always"
-        android:title="@string/action_create_save"/>
+        android:title="@string/action_create_cancel"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_create_save"
         android:icon="@drawable/ic_action_done"
         android:orderInCategory="90"
-        app:showAsAction="always"
-        android:title="@string/action_create_save"/>
+        android:title="@string/action_create_save"
+        app:showAsAction="ifRoom" />
 </menu>
