--- a/app/src/main/res/menu/menu_menu_edit.xml
+++ b/app/src/main/res/menu/menu_menu_edit.xml
@@ -6,13 +6,13 @@
         android:id="@+id/action_edit_cancel"
         android:icon="@drawable/ic_action_cancel"
         android:orderInCategory="90"
-        app:showAsAction="always"
-        android:title="@string/action_edit_save"/>
+        android:title="@string/action_edit_cancl"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_edit_save"
         android:icon="@drawable/ic_action_done"
         android:orderInCategory="90"
-        app:showAsAction="always"
-        android:title="@string/action_edit_save"/>
+        android:title="@string/action_edit_save"
+        app:showAsAction="ifRoom" />
 
 </menu>
