--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <!-- Snackbar Action Link -->
         <item name="colorAccent">@color/primary</item>
-        <item name="android:buttonStyle">@style/OCButton</item>
+        <item name="android:buttonStyle">@style/ocbutton</item>
     </style>
     <style name="fab">
         <item name="android:layout_margin">16dp</item>
@@ -18,9 +18,10 @@
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_alignParentRight">true</item>
     </style>
-    <style name="OCButton" parent="android:style/Widget.Button">
-        <item name="android:background">@color/bg_normal</item>
-        <item name="android:textColor">@color/primary</item>
+
+    <style name="ocbutton" parent="android:style/Widget.Button">
+        <item name="android:background">@color/primary</item>
+        <item name="android:textColor">@drawable/button_selector</item>
         <item name="android:padding">@dimen/button_padding</item>
         <item name="android:elevation">@dimen/button_elevation</item>
     </style>
