Fix #29 Date and date header improvements

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -24,7 +24,8 @@
         android:id="@+id/settings_url_warn_http"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:background="@color/bg_attention"
         android:padding="8dp"
         android:text="@string/settings_url_warn_http"
