Fix #50 In edit view, text alignment should be the same as in note view and #49 Background color should be white everywhere

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <!-- Snackbar Action Link -->
         <item name="colorAccent">@color/primary</item>
         <item name="android:buttonStyle">@style/ocbutton</item>
+        <item name="android:windowBackground">@color/bg_normal</item>
     </style>
     <style name="fab">
         <item name="android:layout_margin">16dp</item>
