--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -41,7 +41,8 @@
             android:id="@+id/settings_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/settings_username" />
+            android:hint="@string/settings_username"
+            android:inputType="text"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
