Started with Material Design

--- a/app/src/main/res/layout/activity_select_single_note.xml
+++ b/app/src/main/res/layout/activity_select_single_note.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/select_single_note_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 </LinearLayout>
