--- a/app/src/main/res/drawable/list_item_background_selector.xml
+++ b/app/src/main/res/drawable/list_item_background_selector.xml
@@ -3,5 +3,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- :selected -->
     <item android:drawable="@color/bg_highlighted" android:state_activated="true"/>
-    <item android:drawable="@color/bg_normal"/>
+    <item android:drawable="@color/bg_normal">
+    </item>
+
 </selector>
