--- a/app/src/main/res/layout/fragment_notes_list_note_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_note_item.xml
@@ -3,9 +3,9 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
+  <!--  <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_gravity="center"
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
         card_view:cardCornerRadius="2dp"
         card_view:contentPadding="@dimen/activity_vertical_margin"
         card_view:cardElevation="@dimen/cardview_default_elevation"
-        android:foreground="?android:attr/selectableItemBackground">
+        android:foreground="?android:attr/selectableItemBackground"> -->
 
         <RelativeLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -45,13 +45,18 @@
                 android:layout_alignParentRight="true"
                 android:layout_below="@id/noteTitle"
                 android:ellipsize="marquee"
-                android:singleLine="false"
+                android:singleLine="true"
                 android:textColor="@drawable/list_item_color_selector_low"
                 android:textSize="14sp"
                 android:minLines="1"
                 android:maxLines="10" />
+               <View
+                   android:id="@+id/lineView"
+                   android:layout_width="match_parent"
+                   android:layout_height="2px"
+                   android:background="@android:color/black"/>
 
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    <!-- </android.support.v7.widget.CardView> -->
 </LinearLayout>
 
