Startet with animations

--- a/app/src/main/res/layout/activity_single_note.xml
+++ b/app/src/main/res/layout/activity_single_note.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -11,16 +11,18 @@
 
         <TextView
             android:id="@+id/single_note_content"
-        android:layout_width="match_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/fg_default" />
+            android:textColor="@color/fg_default"
+            android:transitionName="@string/noteTransition" />
     </ScrollView>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_edit"
         style="@style/fab"
         android:src="@drawable/ic_action_edit"
         app:backgroundTint="@color/primary"
-        app:rippleColor="@color/primary_dark"/>
+        app:rippleColor="@color/primary_dark" />
 </merge>
