--- a/app/src/main/res/layout/fragment_notes_list_note_card.xml
+++ b/app/src/main/res/layout/fragment_notes_list_note_card.xml
@@ -1,57 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_margin="5dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:transitionName="@string/noteTransition"
+    card_view:cardCornerRadius="2dp"
+    card_view:cardElevation="@dimen/cardview_default_elevation"
+    card_view:contentPadding="@dimen/activity_vertical_margin">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_gravity="center"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/noteItem"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        card_view:cardCornerRadius="2dp"
-        card_view:contentPadding="@dimen/activity_vertical_margin"
-        card_view:cardElevation="@dimen/cardview_default_elevation"
-        android:foreground="?android:attr/selectableItemBackground">
+        android:layout_height="wrap_content">
 
-        <RelativeLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/noteItem"
+        <TextView
+            android:id="@+id/noteTitle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignWithParentIfMissing="true"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:textColor="@drawable/list_item_color_selector"
+            android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/noteTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="false"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignWithParentIfMissing="true"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:textColor="@drawable/list_item_color_selector"
-                android:textSize="16sp" />
+        <TextView
+            android:id="@+id/noteExcerpt"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/noteTitle"
+            android:ellipsize="marquee"
+            android:maxLines="10"
+            android:minLines="1"
+            android:singleLine="false"
+            android:textColor="@drawable/list_item_color_selector_low"
+            android:textSize="14sp" />
 
-            <TextView
-                android:id="@+id/noteExcerpt"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_below="@id/noteTitle"
-                android:ellipsize="marquee"
-                android:textColor="@drawable/list_item_color_selector_low"
-                android:textSize="14sp"
-                android:singleLine="false"
-                android:minLines="1"
-                android:maxLines="10" />
-
-        </RelativeLayout>
-     </android.support.v7.widget.CardView>
-</LinearLayout>
-
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
