--- a/app/src/main/res/layout/fragment_notes_list_note_card.xml
+++ b/app/src/main/res/layout/fragment_notes_list_note_card.xml
@@ -18,32 +18,16 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/noteTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="false"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignWithParentIfMissing="true"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:textColor="@drawable/list_item_color_selector"
-            android:textSize="16sp" />
-
-        <TextView
             android:id="@+id/noteExcerpt"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/noteTitle"
-            android:ellipsize="marquee"
             android:maxLines="10"
             android:minLines="1"
             android:singleLine="false"
-            android:textColor="@drawable/list_item_color_selector_low"
+            android:textColor="@drawable/list_item_color_selector"
             android:textSize="14sp" />
 
     </RelativeLayout>
