--- a/app/src/main/res/layout/fragment_notes_list_section_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_section_item.xml
@@ -3,7 +3,7 @@
     android:id="@+id/sectionItem"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:layout_height="wrap_content"
     android:background="@color/bg_highlighted"
     android:padding="8dp">
 
