--- a/app/src/main/res/layout/fragment_notes_list_note_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_note_item.xml
@@ -1,38 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/noteItem"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="1px"
-    android:background="@drawable/list_item_background_selector"
-    android:padding="16dp">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/noteTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="false"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignWithParentIfMissing="true"
-        android:ellipsize="end"
-        android:gravity="center_vertical"
-        android:textColor="@drawable/list_item_color_selector"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/noteExcerpt"
+    <RelativeLayout
+        android:id="@+id/noteItem"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/noteTitle"
-        android:ellipsize="marquee"
-        android:singleLine="true"
-        android:textColor="@drawable/list_item_color_selector_low"
-        android:textSize="14sp" />
+        android:background="@drawable/list_item_background_selector"
+        android:padding="16dp">
 
+        <TextView
+            android:id="@+id/noteTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignWithParentIfMissing="true"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:textColor="@drawable/list_item_color_selector"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/noteExcerpt"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/noteTitle"
+            android:ellipsize="marquee"
+            android:singleLine="true"
+            android:textColor="@drawable/list_item_color_selector_low"
+            android:textSize="14sp"/>
+
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="1px"
+        android:src="@color/separator"/>
 </RelativeLayout>
