--- a/app/src/main/res/layout/fragment_notes_list_section_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_section_item.xml
@@ -3,25 +3,29 @@
     android:id="@+id/sectionItem"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="1px"
-    android:background="@color/bg_highlighted"
-    android:padding="8dp">
-
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/sectionTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="false"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignWithParentIfMissing="true"
+        android:background="@color/bg_highlighted"
         android:ellipsize="end"
         android:gravity="center_vertical"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
+        android:padding="8dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:textColor="@color/fg_default_selection"
-        android:textSize="12sp" />
+        android:textSize="12sp"/>
 
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="1px"
+        android:src="@color/separator"/>
 </RelativeLayout>
