--- a/app/src/main/res/layout/fragment_notes_list_section_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_section_item.xml
@@ -16,9 +16,10 @@
         android:background="@color/bg_highlighted"
         android:ellipsize="end"
         android:gravity="center_vertical"
-        android:padding="8dp"
+        android:paddingBottom="8dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
+        android:paddingTop="8dp"
         android:textColor="@color/fg_default_selection"
         android:textSize="12sp"/>
 
