--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,68 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<android.support.v4.app.FragmentTabHost
+    android:id="@android:id/tabhost"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TabWidget
+            android:id="@android:id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:orientation="horizontal"/>
+
+        <FrameLayout
+            android:id="@android:id/tabcontent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="0"/>
+
+        <FrameLayout
+            android:id="@+id/realtabcontent"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+</android.support.v4.app.FragmentTabHost>
+
+    <!--<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:padding="@dimen/activity_horizontal_margin">
 
-    <TextView
-        android:id="@+id/about_version_title"
-        style="?android:attr/listSeparatorTextViewStyle"
+    <TabHost
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/about_version_title"/>
+        android:layout_height="match_parent"
+        android:id="@+id/tabhost">
 
-    <TextView
-        android:id="@+id/about_version"
-        style="?android:attr/editTextPreferenceStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="@string/about_version"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/about_author_title"
-        style="?android:attr/listSeparatorTextViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/about_author_title"/>
+            <TabWidget
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/about_tabs">
+            </TabWidget>
 
-    <TextView
-        android:id="@+id/about_author"
-        style="?android:attr/editTextPreferenceStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="@string/about_author"/>
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/about_app_icon_disclaimer_title"
-        style="?android:attr/listSeparatorTextViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/about_app_icon_disclaimer_title"/>
+                <LinearLayout
+                    android:id="@+id/linearLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/about_app_icon_disclaimer"
-        style="?android:attr/editTextPreferenceStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="@string/about_app_icon_disclaimer"/>
+                    <TextView
+                        android:id="@+id/about_version_title"
+                        style="?android:attr/listSeparatorTextViewStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/about_version_title"/>
 
-    <TextView
-        android:id="@+id/about_icons_disclaimer_title"
-        style="?android:attr/listSeparatorTextViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/about_icons_disclaimer_title"/>
+                    <TextView
+                        android:id="@+id/about_version"
+                        style="?android:attr/editTextPreferenceStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:text="@string/about_version"/>
 
-    <TextView
-        android:id="@+id/about_icons_disclaimer"
-        style="?android:attr/editTextPreferenceStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="@string/about_icons_disclaimer"/>
+                    <TextView
+                        android:id="@+id/about_author_title"
+                        style="?android:attr/listSeparatorTextViewStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/about_author_title"/>
 
-</LinearLayout>
+                    <TextView
+                        android:id="@+id/about_author"
+                        style="?android:attr/editTextPreferenceStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:text="@string/about_author"/>
+
+                    <TextView
+                        android:id="@+id/about_app_icon_disclaimer_title"
+                        style="?android:attr/listSeparatorTextViewStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/about_app_icon_disclaimer_title"/>
+
+                    <TextView
+                        android:id="@+id/about_app_icon_disclaimer"
+                        style="?android:attr/editTextPreferenceStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:text="@string/about_app_icon_disclaimer"/>
+
+                    <TextView
+                        android:id="@+id/about_icons_disclaimer_title"
+                        style="?android:attr/listSeparatorTextViewStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/about_icons_disclaimer_title"/>
+
+                    <TextView
+                        android:id="@+id/about_icons_disclaimer"
+                        style="?android:attr/editTextPreferenceStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:text="@string/about_icons_disclaimer"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearLayout2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearLayout3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                </LinearLayout>
+            </FrameLayout>
+        </LinearLayout>
+    </TabHost>
+
+</LinearLayout-->
