--- a/app/src/main/res/layout/fragment_about_license_tab.xml
+++ b/app/src/main/res/layout/fragment_about_license_tab.xml
@@ -10,8 +10,54 @@
         android:padding="@dimen/activity_horizontal_margin">
 
         <TextView
+            android:id="@+id/about_app_license_title"
+            style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="This app is licensed under GPLv2"/>
+            android:text="@string/about_app_license_title"/>
+
+        <TextView
+            android:id="@+id/about_app_license"
+            style="?android:attr/editTextPreferenceStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/about_app_license"/>
+
+        <Button
+            android:id="@+id/about_app_license_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/about_app_license_button"/>
+
+        <TextView
+            android:id="@+id/about_app_icon_disclaimer_title"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/about_app_icon_disclaimer_title"/>
+
+        <TextView
+            android:id="@+id/about_app_icon_disclaimer"
+            style="?android:attr/editTextPreferenceStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/about_app_icon_disclaimer"/>
+
+        <TextView
+            android:id="@+id/about_icons_disclaimer_title"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/about_icons_disclaimer_title"/>
+
+        <TextView
+            android:id="@+id/about_icons_disclaimer"
+            style="?android:attr/editTextPreferenceStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/about_icons_disclaimer"/>
     </LinearLayout>
 </ScrollView>
