Fix #70 Can't copy text when not in edit mode
This works only on API level 11 and higher

--- a/app/src/main/res/layout/activity_single_note.xml
+++ b/app/src/main/res/layout/activity_single_note.xml
@@ -11,11 +11,12 @@
 
         <TextView
             android:id="@+id/single_note_content"
-        android:layout_width="match_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/fg_default" />
+            android:textColor="@color/fg_default"
+            android:textIsSelectable="true"/>
     </ScrollView>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_edit"
