#68 integrate a singular and plural version of <string name="ab_selected">
Added other languages and terminate non-plural-string.

--- a/app/src/main/res/values-hy/plurals.xml
+++ b/app/src/main/res/values-hy/plurals.xml
@@ -2,7 +2,7 @@
 <resources>
     <plurals
         name="ab_selected">
-        <item quantity="one">%d selectionnée(s)</item>
-        <item quantity="other">%d selectionnée(s)</item>
+        <item quantity="one">%d ընտրված է</item>
+        <item quantity="other">%d ընտրված է</item>
     </plurals>
 </resources>
