--- a/app/src/main/res/layout/widget_all_notes.xml
+++ b/app/src/main/res/layout/widget_all_notes.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <ListView
-        android:id="@+id/list_view"
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/bg_transparent"
