--- a/app/src/main/res/layout/activity_select_single_note.xml
+++ b/app/src/main/res/layout/activity_select_single_note.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/select_single_note"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,6 +9,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="#00ffffff"
-        android:dividerHeight="0dp">
-    </android.support.v7.widget.RecyclerView>
+        android:dividerHeight="0dp"></android.support.v7.widget.RecyclerView>
 </LinearLayout>
