--- a/app/src/main/res/layout/fragment_notes_list_section_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_section_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/sectionItem"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/sectionTitle"
         android:layout_width="match_parent"
@@ -21,12 +21,12 @@
         android:paddingRight="16dp"
         android:paddingTop="8dp"
         android:textColor="@color/fg_default_selection"
-        android:textSize="12sp"/>
+        android:textSize="12sp" />
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="1px"
-        android:src="@color/separator"/>
+        android:src="@color/separator" />
 </RelativeLayout>
