--- a/app/src/main/res/drawable/list_item_color_selector.xml
+++ b/app/src/main/res/drawable/list_item_color_selector.xml
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Selector is used for Header Color in List Items -->
+<?xml version="1.0" encoding="utf-8"?><!-- Selector is used for Header Color in List Items -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- :selected -->
-    <item android:color="@color/fg_default_selection" android:state_activated="true"/>
-    <item android:color="@color/fg_default"/>
+    <item android:color="@color/fg_default_selection" android:state_activated="true" />
+    <item android:color="@color/fg_default" />
 </selector>
