--- a/app/src/main/res/layout/fragment_about_credits_tab.xml
+++ b/app/src/main/res/layout/fragment_about_credits_tab.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -9,9 +9,8 @@
         android:orientation="vertical"
         android:padding="@dimen/activity_horizontal_margin">
 
-        <TextView
+        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/textView"
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -21,14 +20,14 @@
             android:text="@string/app_name"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/fg_default_low"
-            android:textSize="26sp"/>
+            android:textSize="26sp" />
 
         <TextView
             android:id="@+id/about_version_title"
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/about_version_title"/>
+            android:text="@string/about_version_title" />
 
         <TextView
             android:id="@+id/about_version"
@@ -36,14 +35,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="@string/about_version"/>
+            android:text="@string/about_version" />
 
         <TextView
             android:id="@+id/about_maintainer_title"
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/about_maintainer_title"/>
+            android:text="@string/about_maintainer_title" />
 
         <TextView
             android:id="@+id/about_maintainer"
@@ -51,14 +50,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="@string/about_maintainer"/>
+            android:text="@string/about_maintainer" />
 
         <TextView
             android:id="@+id/about_developers_title"
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/about_developers_title"/>
+            android:text="@string/about_developers_title" />
 
         <TextView
             android:id="@+id/about_developers"
@@ -66,14 +65,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="@string/about_developers"/>
+            android:text="@string/about_developers" />
 
         <TextView
             android:id="@+id/about_translators_title"
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/about_translators_title"/>
+            android:text="@string/about_translators_title" />
 
         <TextView
             android:id="@+id/about_translators"
@@ -81,14 +80,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="@string/about_translators"/>
+            android:text="@string/about_translators" />
 
         <TextView
             android:id="@+id/about_testers_title"
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/about_testers_title"/>
+            android:text="@string/about_testers_title" />
 
         <TextView
             android:id="@+id/about_testers"
@@ -96,6 +95,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="@string/about_testers"/>
+            android:text="@string/about_testers" />
     </LinearLayout>
 </ScrollView>
