--- a/app/src/main/res/layout/fragment_no_notes.xml
+++ b/app/src/main/res/layout/fragment_no_notes.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/textView"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -9,5 +8,4 @@
     android:text="@string/no_notes"
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:textColor="@color/fg_default_low"
-    android:textSize="26sp"
-    />
+    android:textSize="26sp" />
