--- a/app/src/main/res/layout/fragment_notes_list_note_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_note_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
 
@@ -16,15 +15,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="false"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_alignWithParentIfMissing="true"
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:textColor="@drawable/list_item_color_selector"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/noteExcerpt"
@@ -37,7 +36,7 @@
             android:ellipsize="marquee"
             android:singleLine="true"
             android:textColor="@drawable/list_item_color_selector_low"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
 
         <ImageView
             android:id="@+id/noteStatus"
@@ -45,7 +44,7 @@
             android:layout_height="18dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/ic_sync_alert_black_18dp"/>
+            android:src="@drawable/ic_sync_alert_black_18dp" />
 
     </RelativeLayout>
 
@@ -54,5 +53,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="1px"
-        android:src="@color/separator"/>
+        android:src="@color/separator" />
 </RelativeLayout>
