--- a/app/src/main/res/values-hy/plurals.xml
+++ b/app/src/main/res/values-hy/plurals.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <plurals
-        name="ab_selected">
+    <plurals name="ab_selected">
         <item quantity="one">%d ընտրված է</item>
         <item quantity="other">%d ընտրված է</item>
     </plurals>
