--- a/app/src/main/res/values-ru/plurals.xml
+++ b/app/src/main/res/values-ru/plurals.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <plurals
-        name="ab_selected">
+    <plurals name="ab_selected">
         <item quantity="one">%d выбрана</item>
         <item quantity="few">%d выбрано</item>
         <item quantity="many">%d выбрано</item>
