#147 Move from ownCloud to Nextcloud
- Adjust theme to match the lighter blue color set of nextcloud
- Adjust README.md in this repository

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <!-- Colors -->
 
-    <color name="primary">#1d2d44</color>
+    <color name="primary">#0082C9</color>
     <color name="primary_dark">#112233</color>
 
     <color name="separator">#d2d2d2</color>
