#2 Render markdown inline
Replace Bypass library with RxMarkdown library

--- a/app/src/main/res/layout/widget_single_note.xml
+++ b/app/src/main/res/layout/widget_single_note.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <com.yydcdut.rxmarkdown.RxMDTextView
         android:id="@+id/single_note_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
