--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <EditText
+        <com.yydcdut.rxmarkdown.RxMDEditText
             android:id="@+id/editContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
