--- a/app/src/main/res/layout/activity_single_note.xml
+++ b/app/src/main/res/layout/activity_single_note.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <com.yydcdut.rxmarkdown.RxMDTextView
             android:id="@+id/single_note_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
