#2 Render markdown inline
- better font-sizes for h1-h6
- enable RxMarkdown on creating notes (not only editing)

--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <EditText
+        <com.yydcdut.rxmarkdown.RxMDEditText
             android:id="@+id/createContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
